--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@
                             </div>
                             <div class="more-info">
                                 <div class="property-info">
+                                    <i class="fa fa-calendar"></i>
+                                    12/06/2017
+                                </div>
+                                <div class="property-info">
                                     <i class="fa fa-tag"></i>
-                                    Maison
+                                    Appartement
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-expand"></i>
@@ -83,7 +87,7 @@
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-bed"></i>
-                                    3
+                                    2
                                 </div>
                             </div>
                         </footer>
@@ -98,6 +102,10 @@
                                 <h3>Brequigny</h3>
                             </div>
                             <div class="more-info">
+                                <div class="property-info">
+                                    <i class="fa fa-calendar"></i>
+                                    10/08/2017
+                                </div>
                                 <div class="property-info">
                                     <i class="fa fa-tag"></i>
                                     Maison
@@ -124,6 +132,10 @@
                             </div>
                             <div class="more-info">
                                 <div class="property-info">
+                                    <i class="fa fa-calendar"></i>
+                                    22/08/2017
+                                </div>
+                                <div class="property-info">
                                     <i class="fa fa-tag"></i>
                                     Maison
                                 </div>
@@ -133,7 +145,7 @@
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-bed"></i>
-                                    3
+                                    2
                                 </div>
                             </div>
                         </footer>
@@ -149,16 +161,20 @@
                             </div>
                             <div class="more-info">
                                 <div class="property-info">
+                                    <i class="fa fa-calendar"></i>
+                                    10/04/2017
+                                </div>
+                                <div class="property-info">
                                     <i class="fa fa-tag"></i>
-                                    Maison
+                                    Appartement
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-expand"></i>
-                                    320m2
+                                    80m2
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-bed"></i>
-                                    3
+                                    2
                                 </div>
                             </div>
                         </footer>
@@ -174,6 +190,10 @@
                             </div>
                             <div class="more-info">
                                 <div class="property-info">
+                                    <i class="fa fa-calendar"></i>
+                                    14/05/2017
+                                </div>
+                                <div class="property-info">
                                     <i class="fa fa-tag"></i>
                                     Maison
                                 </div>
@@ -183,7 +203,7 @@
                                 </div>
                                 <div class="property-info">
                                     <i class="fa fa-bed"></i>
-                                    3
+                                    4
                                 </div>
                             </div>
                         </footer>
